MyDataCheck/docs/archive/completion_notices/语法错误修复完成.txt
================================================================================
MyDataCheck 语法错误修复完成
================================================================================

修复时间: 2026-01-27

问题描述:
-----------
启动服务时报错:
  File "common/memory_manager.py", line 6
  """f
  ^
  SyntaxError: invalid syntax

原因分析:
-----------
在 memory_manager.py 文件的第6行，文档字符串后面多了一个字符 'f'

修复方案:
-----------
删除多余的 'f' 字符

修复文件:
-----------
- MyDataCheck/common/memory_manager.py

验证结果:
-----------
✅ 语法检查通过
✅ 模块导入成功
✅ 所有测试通过

现在可以正常启动服务:
-----------
cd MyDataCheck
./start_web.sh

或者:
cd MyDataCheck
source .venv/bin/activate
python web_app.py

访问地址:
-----------
http://127.0.0.1:5001

================================================================================
修复完成！可以正常使用了 🎉
================================================================================
